uploading new functions, readme, and vignettes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,14 @@ export(eda_crosstable)
 export(eda_freqtable)
 export(eda_loadtoenv)
 export(eda_participants)
+export(plot_bar_h)
+export(plot_bar_v)
+export(plot_groupbar_h)
+export(plot_groupbar_v)
 export(sep_palette)
 export(sep_palettes)
 export(theme_sep)
 import(dplyr)
+import(ggplot2)
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
