--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,14 +5,18 @@ export(eda_crosstable)
 export(eda_freqtable)
 export(eda_loadtoenv)
 export(eda_participants)
+export(n_par)
 export(plot_bar_h)
 export(plot_bar_v)
 export(plot_groupbar_h)
 export(plot_groupbar_v)
 export(sep_palette)
 export(sep_palettes)
+export(share_dk)
 export(theme_sep)
 import(dplyr)
 import(ggplot2)
+importFrom(forcats,fct_rev)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
+importFrom(sep,n_par)
