forgot to check the new functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,8 +15,7 @@ export(sep_palettes)
 export(share_dk)
 export(theme_sep)
 import(dplyr)
+import(forcats)
 import(ggplot2)
-importFrom(forcats,fct_rev)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
-importFrom(sep,n_par)
