adjusting cb_functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,9 @@ export(theme_sep)
 import(dplyr)
 import(forcats)
 import(ggplot2)
-import(kableExtra)
+importFrom(kableExtra,column_spec)
+importFrom(kableExtra,kable)
+importFrom(kableExtra,kable_styling)
+importFrom(kableExtra,pack_rows)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
