--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(share_dk)
 export(theme_sep)
 import(dplyr)
 import(forcats)
+import(ggfittext)
 import(ggplot2)
 importFrom(kableExtra,column_spec)
 importFrom(kableExtra,kable)
