--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(cb_mistable)
 export(cb_page)
 export(cb_pages)
 export(cb_sumplot)
+export(cb_sumplot_mcq)
 export(cb_sumtab)
 export(cb_table)
 export(eda_crosstable)
