--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ export(plot_bar_h)
 export(plot_bar_v)
 export(plot_groupbar_h)
 export(plot_groupbar_v)
+export(plot_multiple_h)
+export(plot_rank_v)
 export(sep_palette)
 export(sep_palettes)
 export(share_dk)
@@ -24,6 +26,7 @@ import(dplyr)
 import(forcats)
 import(ggfittext)
 import(ggplot2)
+import(tidyverse)
 importFrom(kableExtra,column_spec)
 importFrom(kableExtra,kable)
 importFrom(kableExtra,kable_styling)
