--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(eda_crosstable)
 export(eda_freqtable)
 export(helper_percentage)
 export(n_par)
+export(n_par_by)
 export(plot_bar_h)
 export(plot_bar_v)
 export(plot_groupbar_h)
@@ -26,6 +27,7 @@ import(dplyr)
 import(forcats)
 import(ggfittext)
 import(ggplot2)
+import(tidyr)
 import(tidyverse)
 importFrom(kableExtra,column_spec)
 importFrom(kableExtra,kable)
