--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ import(dplyr)
 import(forcats)
 import(ggfittext)
 import(ggplot2)
+import(pollster)
 import(tidyr)
 import(tidyverse)
 importFrom(kableExtra,column_spec)
